[gd_scene load_steps=15 format=3 uid="uid://darcr8ymhfsa1"]

[ext_resource type="Script" path="res://Scenes/MainMenu.gd" id="1_46qfw"]
[ext_resource type="Texture2D" uid="uid://bfjcevy25yrp8" path="res://Sprites/startmenu.png" id="2_2atke"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gsggi"]
atlas = ExtResource("2_2atke")
region = Rect2(0, 0, 768, 432)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqo7s"]
atlas = ExtResource("2_2atke")
region = Rect2(0, 432, 768, 432)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcny7"]
atlas = ExtResource("2_2atke")
region = Rect2(0, 864, 768, 432)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w6vg"]
atlas = ExtResource("2_2atke")
region = Rect2(0, 1296, 768, 432)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnvkv"]
atlas = ExtResource("2_2atke")
region = Rect2(0, 1728, 768, 432)

[sub_resource type="AtlasTexture" id="AtlasTexture_62g6y"]
atlas = ExtResource("2_2atke")
region = Rect2(0, 2160, 768, 432)

[sub_resource type="AtlasTexture" id="AtlasTexture_qno6d"]
atlas = ExtResource("2_2atke")
region = Rect2(0, 2592, 768, 432)

[sub_resource type="SpriteFrames" id="SpriteFrames_n7nl6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsggi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqo7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcny7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w6vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnvkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62g6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qno6d")
}],
"loop": true,
"name": &"StartMenu",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1nmo"]
bg_color = Color(0.313726, 1, 0, 0.352941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_265pa"]
bg_color = Color(0.313726, 1, 0, 0.352941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p4ho8"]
bg_color = Color(0.313726, 1, 0, 0.352941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d81f4"]
bg_color = Color(0.313726, 1, 0, 0.352941)

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_46qfw")

[node name="AnimationContainer" type="Container" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.494
anchor_right = 0.5
anchor_bottom = 0.494
offset_left = -576.0
offset_top = -320.112
offset_right = 576.0
offset_bottom = 327.888

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AnimationContainer"]
position = Vector2(576, 324)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_n7nl6")
animation = &"StartMenu"
autoplay = "StartMenu"

[node name="PONG" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.494
anchor_right = 0.5
anchor_bottom = 0.494
offset_left = -192.0
offset_top = -192.112
offset_right = 192.0
offset_bottom = -0.112
theme_override_font_sizes/font_size = 80
text = "PONG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.494
anchor_right = 0.5
anchor_bottom = 0.494
offset_left = -128.0
offset_top = -33.112
offset_right = 128.0
offset_bottom = 30.888
theme_override_styles/hover = SubResource("StyleBoxFlat_l1nmo")
text = "PLAY"

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.494
anchor_right = 0.5
anchor_bottom = 0.494
offset_left = -128.0
offset_top = 38.888
offset_right = 128.0
offset_bottom = 103.888
theme_override_styles/hover = SubResource("StyleBoxFlat_265pa")
text = "Continue
"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.494
anchor_right = 0.5
anchor_bottom = 0.494
offset_left = -192.0
offset_top = 114.888
offset_right = -155.0
offset_bottom = 145.888
theme_override_styles/hover = SubResource("StyleBoxFlat_p4ho8")
text = "Exit
"
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.494
anchor_right = 0.5
anchor_bottom = 0.494
offset_left = 152.0
offset_top = 111.888
offset_right = 222.0
offset_bottom = 142.888
theme_override_styles/hover = SubResource("StyleBoxFlat_d81f4")
text = "Settings
"

[node name="Credit" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.494
anchor_right = 0.5
anchor_bottom = 0.494
offset_left = -155.0
offset_top = 301.888
offset_right = 155.0
offset_bottom = 327.888
grow_horizontal = 2
grow_vertical = 0
text = "A demo by:    Seth. B,    Leo. G,   Simon. Ã…"

[connection signal="pressed" from="PlayButton" to="." method="_on_button_pressed"]
[connection signal="button_down" from="ExitButton" to="." method="_on_exit_button_down"]
